--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
     "express": "^4.17.2",
     "mongoose": "^6.1.3"
   },
+  "eslintConfig": {
+    "extends": ["airbnb/base","prettier"],
+    "rules": {
+      "no-console": "off",
+      "no-unused-vars": "warn"
+    }
+  },
   "devDependencies": {
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
